<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#595959"
    tools:context=".ReviewActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/review_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins"
        android:text="@string/review_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="900dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/back"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/review_heading">

        <TextView
            android:id="@+id/review_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/review_greeting"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/review_name_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittextback"
            android:hint="@string/enter_your_name_here"
            android:textAlignment="center" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:id="@+id/review_stars"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:progressTint="#F7BA00"
            android:secondaryProgressTint="#F7BA00"
            android:rating="3.5"
            android:stepSize="0.5"/>

        <EditText
            android:id="@+id/review_suggestion_input"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittextback"
            android:hint="@string/enter_your_suggestions_here"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="#595959"
            android:text="@string/submit_btn_text" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/home_bottombar"
                android:src="@drawable/home_icon1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/add_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:contentDescription="@string/add_bottombar"
                android:focusable="true"
                android:src="@drawable/add_icon" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/search_bottombar"
                android:src="@drawable/search_icon" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>