<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="15dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="20dp">
            <ImageView
                android:id="@+id/software_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/software_logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/software_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/software_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/software_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/software_description_text"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/source_layout"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/software_source_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/source_code_text"
                android:textColor="@color/black"/>

            <TextView
            android:id="@+id/software_source_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/source_code_link"
            android:textColor="@color/black"/>

        </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/download_layout"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/software_download_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/download_link_text"
                android:textColor="@color/black"/>

            <TextView
            android:id="@+id/software_download_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/download_link"
            android:textColor="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rating_layout"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/software_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/software_rating_text"
                android:textColor="@color/black"/>

            <RatingBar
                android:id="@+id/software_rating_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:numStars="5"
                android:rating="4"
                android:isIndicator="true"
                android:stepSize="1"
                style="?android:attr/ratingBarStyleSmall"
                android:progressTint="#F7BA00"
                android:secondaryProgressTint="#F7BA00"/>


        </LinearLayout>



    </LinearLayout>

</com.google.android.material.card.MaterialCardView>